Fix viewport units on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,7 @@ html {
 body {
   width: 100%;
   height: 100vh;
+  height: calc(var(--vh, 1vh) *100);
   overflow: hidden;
   background: url(./../src/images/cloud.png), radial-gradient(circle at 0% 0%, $color-primary-dark, $color-primary, $color-primary-dark);
   background-position: left 0 top 0, left 0 top 0;
